--- a/DCL.html
+++ b/DCL.html
@@ -86,7 +86,7 @@ $(document).ready(function(){
                  <div class="column-narrow">
                     <p> SECURE</p>
                     <hr width="100%">
-                    <p>Highly secure service with 3 layer protection</p> 
+                    <p>Highly secure service with three layer protection</p> 
 
                 </div>
                  <div class="column-narrow">
